# gg123

./: .gitignore  .replit  DEPLOY_INSTRUCTIONS.md  Readme.md  deploy-to-vercel.bat  ecosystem.config.js  replit.md  start-dev.ps1  start-servers.sh  start-yujian.bat
attached_assets/: content-1761153694814.md  content-1761155222312.md  content-1761156959277.md
prediction-market-backend/: .env.example  env.example  package-lock.json  package.json  readme.md
prediction-market-backend/src/: config.ts  index.ts  prediction.json
prediction-market-backend/src/controller/: index.ts
prediction-market-backend/src/middleware/: proposeValidator.ts
prediction-market-backend/src/model/: market.ts  recent.ts  referral.ts
prediction-market-frontend/: .eslintrc.json  .vercelignore  README.md  VERCEL_DEPLOY.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
prediction-market-frontend/src/: i18n.ts
prediction-market-smartcontract/: .gitignore  Anchor.toml  README.md  package.json
prediction-market-smartcontract/programs/prediction/: Cargo.toml
prediction-market-smartcontract/programs/prediction/src/: constants.rs  errors.rs  events.rs  lib.rs  utils.rs
prediction-market-smartcontract/programs/prediction/src/instructions/: betting.rs  create_market.rs  deposite_liquidity.rs  get_oracle_res.rs  init.rs  mod.rs  token_mint.rs
prediction-market-smartcontract/programs/prediction/src/states/: global.rs  mod.rs
prediction-market-smartcontract/tests/: const.ts  prediction.ts  utils.ts
(+107 files in other folders)
