[package]
name = "prediction"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed", "event-cpi"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
switchboard-solana = "0.29.79"
switchboard-on-demand = "0.1.12"
rust_decimal = "1.37.1"
